[tool.poetry]
name = "dragndroppings"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
Jinja2 = "3.0.3"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[tool.poetry.scripts]
dev_start = "scripts:dev_start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
